# Notepad

./: CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  Highlighter.cpp  Highlighter.h  MainWindow.cpp  MainWindow.h  README.md  index.html  main.cpp  main.py
